examples/test/testpolicy16064.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16064
  namespace: namespace460
spec:
  podSelector:
    matchLabels:
      key6: value18
      key35: value32
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value48
          key25: value44
          key5: value28
